2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkclipboard.c (gtk_clipboard_set_can_store): Silently
	ignore non-CLIPBOARD clipboards.  (#156610, Christian Persch)

	* gtk/gtksettings.c: Make it build on windows. (#156618,
	Kazuki IWAMOTO)

2004-10-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimcontextsimple.c (check_hex): Stop preediting if strtoul 
	couldn't parse the complete preedit string.  (#156434)

	* gtk/gtkmessagedialog.c: 
	* gtk/gtkfilechooserbutton.c: Add missing includes.  (#156503, 
	Kazuki IWAMOTO)

	* gtk/gtkimage.h: 
	* gtk/gtkimage.c (gtk_image_get_icon_name): Make the icon_name 
	parameter G_CONST_RETURN.
	
	* gtk/gtkimage.c: It is enough to listen for screen changes and 
	style-set to catch all icon theme changes.
	(gtk_image_set_property): Reset the image size if the pixel size 
	property is changed.

	* gtk/gtk.symbols: Add new symbols.

	* gdk/x11/gdkdisplay-x11.c (gdk_display_store_clipboard): Fix the 
	doc comment.

2004-10-26  Anders Carlsson  <andersca@imendio.com>

	* gtk/gtktextbuffer.c: (gtk_text_buffer_finalize),
	(create_clipboard_contents_buffer), (clipboard_get_contents_cb),
	(clipboard_clear_contents_cb), (cut_or_copy):
	Rewrite clipboard handling so that the clipboard contents 
	won't be freed when the text buffer is finalized. Also add 
	clipboard manager support. Fixes #95496.

2004-10-25  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkentry.c: (gtk_entry_completion_timeout):
	* gtk/gtkentrycompletion.c: (gtk_entry_completion_set_model),
	(gtk_entry_completion_get_model), (gtk_entry_completion_complete):
	Really handle a NULL model, fixes #137211 for real.

	* gtk/gtkfilechooserentry.c:
	(gtk_file_chooser_entry_maybe_update_directory):
	Remove _clear, #137211 is fixed.

	* tests/testentrycompletion.c: (main):
	Add completion with an empty model.
	
2004-10-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	Fix for #118764, David Bordoley:
	
	* gtk/gtkmessagedialog.[ch]