@@ -1,3 +1,9 @@
+2004-10-28  Anders Carlsson  <andersca@gnome.org>
+
+	* gtk/gtkclipboard.c: (gtk_clipboard_set_can_store):
+	* gtk/gtkclipboard.h:
+	Make targets const.
+
 2004-10-27  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkclipboard.c (gtk_clipboard_set_can_store): Silently
